// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders Direct Enrollment banner 1`] = `
<header
  aria-label="global"
  className="hc-c-header hc-c-header--logged-out"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    Skip to main content
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="en"
        />
      </a>
      <nav
        className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
        id="hc-c-header__actions"
      >
        <ActionMenu
          links={
            Array [
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "/login?check_de=1",
                "identifier": "login",
                "label": "Log in",
              },
            ]
          }
          onMenuToggleClick={[Function]}
          open={false}
          t={[Function]}
        />
        <Menu
          links={
            Array [
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "/login?check_de=1",
                "identifier": "login",
                "label": "Log in",
              },
            ]
          }
          open={false}
        />
      </nav>
    </div>
  </div>
  <DeConsumerMessage
    deBrokerName="Foo"
    t={[Function]}
  />
</header>
`;

exports[`Header renders Spanish header 1`] = `
<header
  aria-label="global"
  className="hc-c-header hc-c-header--logged-out"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    Ir al contenido principal
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="es"
        />
      </a>
      <nav
        className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
        id="hc-c-header__actions"
      >
        <ActionMenu
          links={
            Array [
              Object {
                "href": "https://www.healthcare.gov/",
                "label": "English",
              },
              Object {
                "href": "/login",
                "identifier": "login",
                "label": "Iniciar sesión",
              },
            ]
          }
          onMenuToggleClick={[Function]}
          open={false}
          t={[Function]}
        />
        <Menu
          links={
            Array [
              Object {
                "href": "https://www.healthcare.gov/",
                "label": "English",
              },
              Object {
                "href": "/login",
                "identifier": "login",
                "label": "Iniciar sesión",
              },
            ]
          }
          open={false}
        />
      </nav>
    </div>
  </div>
</header>
`;

exports[`Header renders full/homepage header 1`] = `
<header
  aria-label="global"
  className="hc-c-header hc-c-header--logged-out"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    Skip to main content
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="en"
        />
      </a>
      <nav
        className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
        id="hc-c-header__actions"
      >
        <ActionMenu
          links={
            Array [
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "/login",
                "identifier": "login",
                "label": "Log in",
              },
            ]
          }
          onMenuToggleClick={[Function]}
          open={false}
          t={[Function]}
        />
        <Menu
          links={
            Array [
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "/login",
                "identifier": "login",
                "label": "Log in",
              },
            ]
          }
          open={false}
        />
      </nav>
    </div>
  </div>
</header>
`;

exports[`Header renders links with absolute URLs if provided a primaryDomain prop 1`] = `
<header
  aria-label="global"
  className="hc-c-header hc-c-header--logged-out"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    Skip to main content
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="https://www.healthcare.gov"
      >
        <Logo
          locale="en"
        />
      </a>
      <nav
        className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
        id="hc-c-header__actions"
      >
        <ActionMenu
          links={
            Array [
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "https://www.healthcare.gov/login",
                "identifier": "login",
                "label": "Log in",
              },
            ]
          }
          onMenuToggleClick={[Function]}
          open={false}
          t={[Function]}
        />
        <Menu
          links={
            Array [
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "https://www.healthcare.gov/login",
                "identifier": "login",
                "label": "Log in",
              },
            ]
          }
          open={false}
        />
      </nav>
    </div>
  </div>
</header>
`;

exports[`Header renders logged-in header with firstName 1`] = `
<header
  aria-label="global"
  className="hc-c-header hc-c-header--logged-in"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    Skip to main content
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="en"
        />
      </a>
      <nav
        className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
        id="hc-c-header__actions"
      >
        <ActionMenu
          firstName="John"
          links={
            Array [
              Object {
                "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
                "label": "My applications & coverage",
              },
              Object {
                "href": "/marketplace/auth/global/en_US/myProfile#settings",
                "label": "My profile",
              },
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "/logout",
                "identifier": "logout",
                "label": "Log out",
              },
            ]
          }
          loggedIn={true}
          onMenuToggleClick={[Function]}
          open={false}
          t={[Function]}
        />
        <Menu
          beforeLinks={
            <div
              className="ds-u-sm-display--none ds-u-border-bottom--1 ds-u-margin-x--1 ds-u-padding-y--1 hc-c-header__name"
            >
              John
            </div>
          }
          links={
            Array [
              Object {
                "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
                "label": "My applications & coverage",
              },
              Object {
                "href": "/marketplace/auth/global/en_US/myProfile#settings",
                "label": "My profile",
              },
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "/logout",
                "identifier": "logout",
                "label": "Log out",
              },
            ]
          }
          open={false}
        />
      </nav>
    </div>
  </div>
</header>
`;

exports[`Header renders logged-in header without firstName 1`] = `
<header
  aria-label="global"
  className="hc-c-header hc-c-header--logged-in"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    Skip to main content
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="en"
        />
      </a>
      <nav
        className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
        id="hc-c-header__actions"
      >
        <ActionMenu
          links={
            Array [
              Object {
                "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
                "label": "My applications & coverage",
              },
              Object {
                "href": "/marketplace/auth/global/en_US/myProfile#settings",
                "label": "My profile",
              },
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "/logout",
                "identifier": "logout",
                "label": "Log out",
              },
            ]
          }
          loggedIn={true}
          onMenuToggleClick={[Function]}
          open={false}
          t={[Function]}
        />
        <Menu
          links={
            Array [
              Object {
                "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
                "label": "My applications & coverage",
              },
              Object {
                "href": "/marketplace/auth/global/en_US/myProfile#settings",
                "label": "My profile",
              },
              Object {
                "href": "https://www.cuidadodesalud.gov/es/",
                "label": "Español",
              },
              Object {
                "href": "/logout",
                "identifier": "logout",
                "label": "Log out",
              },
            ]
          }
          open={false}
        />
      </nav>
    </div>
  </div>
</header>
`;
